[package]
name = "lotto-quick-pick"
version = "0.1.1"
edition = "2021"
author = "Luis Molon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = "0.4.3"
colored = "2.0"
clap = {version = "4.0.32", features = ["derive"]}