[package]
name = "lotto-quick-pick"
version = "1.1.0"
edition = "2024"
authors = ["Luis Molon"]
description = "A flexible lottery number generator with pluggable RNG and probability calculations"
license = "MIT OR Apache-2.0"
keywords = ["lottery", "random", "probability", "cli", "generator"]
categories = ["command-line-utilities", "games", "mathematics"]
rust-version = "1.92"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
colored = "3.0.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "ticket_generation"
harness = false

[[bench]]
name = "probability"
harness = false

[[bench]]
name = "bitwise_comparison"
harness = false

[[bench]]
name = "ticket_key_comparison"
harness = false

[profile.release]
opt-level = 3          # máximo foco em performance
lto = "fat"            # melhor otimização global (mais lento pra compilar)
panic = "abort"        # binário menor e um pouco mais rápido em alguns casos
strip = "symbols"      # remove símbolos (melhora tamanho; não muda runtime)
debug = false
incremental = false